ecmascript/parser/tests/test262-error-references/fail/3425ca087ec1adb1.js.stderr
error: Expected ,, got numeric literal
 --> $DIR/tests/test262-parser/fail/3425ca087ec1adb1.js:1:19
  |
1 | var {x: y = yield 3} = z;
  |                   ^

